@@ -23,6 +23,7 @@ export("parUpper<-")
 export("parbounds<-")
 export("parnames<-")
 export(addTermBranchLength)
+export(ancPropStateMat)
 export(binTimeData)
 export(bin_cal3TimePaleoPhy)
 export(bin_timePaleoPhy)
@@ -54,6 +55,7 @@ export(make_durationFreqCont)
 export(make_durationFreqDisc)
 export(make_inverseSurv)
 export(minBranchLength)
+export(minCharChange)
 export(multiDiv)
 export(nearestNeighborDist)
 export(occData2timeList)
